<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/first"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".FirstActivity" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/gradient_background">

        <ImageView
            android:id="@+id/gloryStarLogoImageViewActFirst"
            android:layout_width="match_parent"
            android:layout_height="200sp"
            android:layout_gravity="center|center"
            android:layout_marginTop="20sp"
            android:src="@drawable/glorystarcompanylogo"
            />

        <ImageView
            android:id="@+id/usernameImageView"
            android:layout_width="match_parent"
            android:layout_height="75sp"
            android:layout_marginTop="25sp"
            android:src="@drawable/usuario"
            tools:layout_gravity="center|center"
            />

        <EditText
            android:id="@+id/cajaTextoCorreo"
            android:layout_width="256sp"
            android:layout_height="48sp"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:background="@color/whiteColor"
            android:padding="5sp"
            android:hint="@string/username_hint"
            android:textColorHint="@color/grayColor"
            android:textColor="@color/blackColor"
            android:textStyle="italic"
            />

        <ImageView
            android:id="@+id/passwordImageView"
            android:layout_width="match_parent"
            android:layout_height="75sp"
            android:layout_marginTop="5sp"
            android:src="@drawable/contrasena"
            />

        <EditText
            android:id="@+id/cajaTextoPass"
            android:layout_width="256sp"
            android:layout_height="48sp"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="textPassword"
            android:background="@color/whiteColor"
            android:padding="5sp"
            android:hint="@string/password_hint"
            android:textColorHint="@color/grayColor"
            android:textColor="@color/blackColor"
            android:textStyle="italic"/>


        <TextView
            android:id="@+id/resultText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:text="@string/contraseña_textView"
            android:textAlignment="center"
            android:textColor="@color/green"
            android:textStyle="italic|bold"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/imageButtonContinuar"
            android:layout_width="wrap_content"
            android:layout_height="60sp"
            android:layout_gravity="center"
            android:layout_margin="15sp"
            android:src="@drawable/entrar"
            android:scaleType="fitCenter"
            android:background="@color/cardview_shadow_end_color"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrarseText"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_margin="10sp"
            android:textStyle="bold|italic"
            android:textColor="@color/blackColor"
            />

        <ImageButton
            android:id="@+id/imageButtonRegistrarse"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            app:srcCompat="@drawable/registrarse"
            android:scaleType="fitCenter"
            android:layout_margin="10sp"
            android:background="@color/cardview_shadow_end_color"
            />

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>
